# tendari

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml  render-free.yaml  render-neon.yaml  render.yaml
.hallmark/: log.json
alembic/: env.py
alembic/versions/: 0001_initial_schema.py
app/: __init__.py  auth.py  cache.py  config.py  db.py  main.py  security.py  seed.py  tasks.py
app/agent/: __init__.py  engine.py  prompts.py  registry.py
app/agent/providers/: __init__.py  anthropic.py  base.py  mock.py  openai.py
app/models/: __init__.py  _common.py  actions.py  conversation.py  documents.py  ecommerce.py  usage.py  workspace.py
app/observability/: __init__.py  usage.py
app/rag/: __init__.py  chunking.py  embeddings.py  ingest.py  loaders.py  retrieve.py
app/routers/: actions.py  conversations.py  documents.py  meta.py
app/schemas/: actions.py  conversations.py  documents.py
app/static/: index.html  landing.html  tokens.css
app/tools/: __init__.py  email.py  escalate.py  help_docs.py  orders.py  refunds.py  tickets.py
scripts/: start-render.sh
tests/: conftest.py  test_agent_loop.py  test_auth.py  test_chunking.py  test_embeddings.py  test_loaders.py  test_refund_flow.py  test_security.py  test_tools.py
